[Feat] Add SWAG docs for GetProfile handler
